unpackaged/main/default/objects/nbavs__API__c/nbavs__API__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>API Deprecated</label>
</CustomObject>