unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__ActivatedInProduction__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ActivatedInProduction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activated In Production</label>
    <type>Checkbox</type>
</CustomField>