unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__AllowPrivateRest__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AllowPrivateRest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Access to Private Rest Resources</label>
    <type>Checkbox</type>
</CustomField>