unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__APIUserId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__APIUserId__c</fullName>
    <defaultValue>0</defaultValue>
    <label>API User Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>