unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__BatchSize__c.field-meta.xml
<CustomField>
    <fullName>nbavs__BatchSize__c</fullName>
    <defaultValue>20</defaultValue>
    <label>Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>