unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__ClientIdSandbox__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ClientIdSandbox__c</fullName>
    <label>Client Id Sandbox</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>