unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ClientSecret__c</fullName>
    <label>Client Secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>