unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__ConnectorId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ConnectorId__c</fullName>
    <label>Connector Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>