unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__DevOrgId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__DevOrgId__c</fullName>
    <label>Dev Org Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>