unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__DevOrgIdSandbox__c.field-meta.xml
<CustomField>
    <fullName>nbavs__DevOrgIdSandbox__c</fullName>
    <label>Dev Org Id Sandbox</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>