unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__Disable_Call_Reporting_Trigger__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Disable_Call_Reporting_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Call Reporting Trigger</label>
    <type>Checkbox</type>
</CustomField>