unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__DisableTriggers__c.field-meta.xml
<CustomField>
    <fullName>nbavs__DisableTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable triggers (leave OFF!)</label>
    <type>Checkbox</type>
</CustomField>