unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__Enable_Insights__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Enable_Insights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Insights</label>
    <type>Checkbox</type>
</CustomField>