unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__Gatekeeper_Host_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Gatekeeper_Host_Sandbox__c</fullName>
    <description>Url is retrieved and returned to insights player based on environment</description>
    <label>Gatekeeper Host Sandbox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>