unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__Host__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Host__c</fullName>
    <label>Host</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>