unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__Key__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Key__c</fullName>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>