unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__LicenceAPIHost__c.field-meta.xml
<CustomField>
    <fullName>nbavs__LicenceAPIHost__c</fullName>
    <label>Licence API Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>