unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__LicenceAPIHostSandbox__c.field-meta.xml
<CustomField>
    <fullName>nbavs__LicenceAPIHostSandbox__c</fullName>
    <label>Licence API Host Sandbox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>