unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__MasterKey__c.field-meta.xml
<CustomField>
    <fullName>nbavs__MasterKey__c</fullName>
    <label>Master Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>