unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__NamespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>nbavs__NamespacePrefix__c</fullName>
    <label>NamespacePrefix</label>
    <length>32</length>
    <type>Text</type>
</CustomField>