unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__NotifyEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>nbavs__NotifyEmailAddress__c</fullName>
    <label>Notify Email Address</label>
    <type>Email</type>
</CustomField>