unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__OrganizationId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__OrganizationId__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Organization Id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>