unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__ProvisioningEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ProvisioningEmailAddress__c</fullName>
    <label>Provisioning Email Address</label>
    <type>Email</type>
</CustomField>