unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__ReduxIPs__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ReduxIPs__c</fullName>
    <label>Redux IP Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>