unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__ReportingPolicyId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ReportingPolicyId__c</fullName>
    <label>Reporting Policy Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>