unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__Sandbox__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sandbox</label>
    <type>Checkbox</type>
</CustomField>