unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__SDOMaximumPhoneNumbers__c.field-meta.xml
<CustomField>
    <fullName>nbavs__SDOMaximumPhoneNumbers__c</fullName>
    <label>SDO Maximum Phone Numbers Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>