unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__ServiceCloudRecordingHost__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ServiceCloudRecordingHost__c</fullName>
    <label>Service Cloud Recording Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>