unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__ServiceCloudRecordingHostSandbox__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ServiceCloudRecordingHostSandbox__c</fullName>
    <label>Service Cloud Recording Host Sandbox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>