unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__SessionRefreshMargin__c.field-meta.xml
<CustomField>
    <fullName>nbavs__SessionRefreshMargin__c</fullName>
    <defaultValue>60</defaultValue>
    <label>Session Refresh Margin</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>