unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__SipDomain__c.field-meta.xml
<CustomField>
    <fullName>nbavs__SipDomain__c</fullName>
    <label>Sip Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>