unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__TelemetryHost__c.field-meta.xml
<CustomField>
    <fullName>nbavs__TelemetryHost__c</fullName>
    <label>Telemetry Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>