unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__TelemetryHostSandbox__c.field-meta.xml
<CustomField>
    <fullName>nbavs__TelemetryHostSandbox__c</fullName>
    <label>Telemetry Host Sandbox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>