unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__Username__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Username__c</fullName>
    <label>Username</label>
    <required>true</required>
    <type>Email</type>
</CustomField>