unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__WallboardAPIHost__c.field-meta.xml
<CustomField>
    <fullName>nbavs__WallboardAPIHost__c</fullName>
    <label>Wallboard API Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>