unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__WallboardAPIHostSandbox__c.field-meta.xml
<CustomField>
    <fullName>nbavs__WallboardAPIHostSandbox__c</fullName>
    <label>Wallboard API Host Sandbox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>