unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__WebPhoneBetaHost__c.field-meta.xml
<CustomField>
    <fullName>nbavs__WebPhoneBetaHost__c</fullName>
    <label>WebPhone Beta Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>