unpackaged/main/default/objects/nbavs__API__c/fields/nbavs__WebPhoneHost__c.field-meta.xml
<CustomField>
    <fullName>nbavs__WebPhoneHost__c</fullName>
    <label>WebPhone Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>